catkin_ws/logs/iq_gnc/build.make.275.log.stderr
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘int main(int, char**)’:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:220:7: error: ‘rate’ is not a member of ‘ros’; did you mean ‘Rate’?
  220 |  ros::rate(10);
      |       ^~~~
      |       Rate
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1891: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
